# gplc

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  gplc.sln
.github/ISSUE_TEMPLATE/: issue-report.md
gplc/: CMakeLists.txt  gplc.vcxproj  gplc.vcxproj.filters
gplc/configs/: .tokens
gplc/include/: gplc.h  gplcCommon.h  gplcCompilerDriver.h
gplc/include/common/: gplcConstants.h  gplcLiterals.h  gplcSymTable.h  gplcTypeSystem.h  gplcTypes.h  gplcVisitor.h
gplc/include/lexer/: gplcLexer.h  gplcTokens.h
gplc/include/parser/: gplcASTNodes.h  gplcParser.h
gplc/include/utils/: CASTLispyPrinter.h  CResult.h  Callback.h  Delegate.h
gplc/source/: gplcCommon.cpp  gplcCompilerDriver.cpp  main.cpp
gplc/source/common/: gplcLiterals.cpp  gplcSymTable.cpp  gplcTypeSystem.cpp
gplc/source/lexer/: gplcLexer.cpp  gplcTokens.cpp
gplc/source/parser/: gplcASTNodes.cpp  gplcParser.cpp
gplc/tests/: tests.cpp  tests.vcxproj  tests.vcxproj.filters
gplc/tests/common/: symTable.cpp
gplc/tests/lexer/: lexer.cpp
gplc/tests/lexer/configs/: .tokens
gplc/tests/parser/: parser.cpp  stubLexer.cpp  stubLexer.h
gplc/tests/utils/: ASTLispyPrinterTests.cpp
gpllib/: CMakeLists.txt  DOXYGEN
gpllib/configs/: .tokens
gpllib/include/: gplc.h
gpllib/include/codegen/: gplcCodegen.h  gplcLLVMCodegen.h  gplcLLVMLinker.h  gplcLLVMLiteralVisitor.h  gplcLLVMNativePrimitives.h  gplcLLVMTypeVisitor.h  gplcLinker.h  gplcNativePrimitives.h
gpllib/include/codegen/ctplr/: gplcCCodegen.h  gplcCLiteralVisitor.h  gplcCTypeVisitor.h
gpllib/include/common/: gplcConstExprInterpreter.h  gplcConstants.h  gplcLiterals.h  gplcModuleResolver.h  gplcSymTable.h  gplcTypeSystem.h  gplcTypes.h  gplcTypesFactory.h  gplcValues.h  gplcVisitor.h
gpllib/include/lexer/: gplcInputStream.h  gplcLexer.h  gplcTokens.h
gpllib/include/parser/: gplcASTNodes.h  gplcASTNodesFactory.h  gplcParser.h  gplcSemanticAnalyser.h
gpllib/include/utils/: CASTLispyPrinter.h  Utils.h
gpllib/source/codegen/: gplcLLVMCodegen.cpp  gplcLLVMLinker.cpp  gplcLLVMLiteralVisitor.cpp  gplcLLVMNativePrimitives.cpp  gplcLLVMTypeVisitor.cpp
gpllib/source/codegen/ctplr/: gplcCCodegen.cpp  gplcCLiteralVisitor.cpp  gplcCTypeVisitor.cpp
gpllib/source/common/: gplcConstExprInterpreter.cpp  gplcLiterals.cpp  gplcModuleResolver.cpp  gplcSymTable.cpp  gplcTypeSystem.cpp  gplcTypesFactory.cpp  gplcValues.cpp
gpllib/source/lexer/: gplcInputStream.cpp  gplcLexer.cpp  gplcTokens.cpp
gpllib/source/parser/: gplcASTNodes.cpp  gplcASTNodesFactory.cpp  gplcParser.cpp  gplcSemanticAnalyser.cpp
gpllib/source/utils/: CASTLispyPrinter.cpp  Utils.cpp
modules/core/: Debug.gpls  Memory.gpls  Types.gpls
tests/: CMakeLists.txt
tests/codegen/: llvmCodeGeneratorTests.cpp  llvmLiteralVisitorTests.cpp  llvmTypeVisitorTests.cpp
tests/codegen/ctplr/: llvmCCodeGeneratorTests.cpp
tests/common/: constExprInterpreter.cpp  symTable.cpp  typeSystemTests.cpp
tests/lexer/: lexer.cpp  stubInputStream.cpp  stubInputStream.h
tests/lexer/configs/: correct.tokens  incorrect.tokens
tests/parser/: parser.cpp  semanticAnalyser.cpp  stubLexer.cpp  stubLexer.h
tests/utils/: ASTLispyPrinterTests.cpp
